src/main/java/com/example/copro/global/error/exception/NotFoundGroupException.java
package com.example.copro.global.error.exception;

public abstract class NotFoundGroupException extends RuntimeException{
    public NotFoundGroupException(String message) {
        super(message);
    }
}
